# psvr_player

./: .gitignore  CMakeLists.txt  resources.qrc  rotatecalibrationdlg.cpp  rotatecalibrationdlg.h  rotatecalibrationdlg.ui
docs/: Coordinates.txt  Distorsion.txt  Координаты.txt
include/: hmdwidget.h  hmdwindow.h  info_screen.h  key_filter.h  mainwindow.h  psvr.h  psvr_control.h  psvrthread.h  tile.h  videoplayer.h
shader/: screen.frag  screen.vert  sphere.frag  sphere.vert
sprite/: backward.data  fastbackward.data  fastforward.data  forward.data  invert_0.data  invert_1.data  no_vr.data  play.data  selector.data
src/: hmdwidget.cpp  hmdwindow.cpp  info_screen.cpp  key_filter.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  psvr.cpp  psvr_control.cpp  psvrthread.cpp  tile.cpp  videoplayer.cpp
